[package]
name = "affair"
version = "0.2.0"
edition = "2021"
authors = ["Parsa Ghadimi <parsa@fleek.xyz>"]
description = "A Tokio-based worker abstraction layer."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ozwaldorf/affair"

[dependencies]
tokio = { version = "1.28", features = ["rt", "sync", "macros"] }
futures = "0.3"
async-trait = "0.1"
crossbeam = "0.8"
tracing = { version = "0.1", optional = true }

[features]
default = ["tracing"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.28", features = [
  "rt",
  "sync",
  "macros",
  "rt-multi-thread",
  "time",
] }
tracing-subscriber = "0.3"

[[bench]]
name = "bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
